[gd_scene load_steps=7 format=3 uid="uid://cchho06uvplbj"]

[ext_resource type="Script" path="res://Scripts/target.gd" id="1_3hny6"]
[ext_resource type="AudioStream" uid="uid://dlqx5t12jq453" path="res://Audio/sonar_ping.mp3" id="2_qamg8"]
[ext_resource type="AudioStream" uid="uid://dhl0d4wb0w4ea" path="res://Audio/Chunky_Explosion.ogg" id="3_ast5x"]
[ext_resource type="AudioStream" uid="uid://djsnx0vrehaqs" path="res://Audio/underwater_engine.ogg" id="4_iqis1"]

[sub_resource type="CylinderMesh" id="CylinderMesh_s24vt"]
top_radius = 2.0
bottom_radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_b3txx"]
radius = 2.0

[node name="Target" type="RigidBody3D" groups=["TargetGroup"]]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_3hny6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_s24vt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_b3txx")

[node name="BeepSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_qamg8")
panning_strength = 3.0

[node name="ExplodeSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_ast5x")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="FiringTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RunningSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_iqis1")
volume_db = -10.48
autoplay = true
max_distance = 20.0
parameters/looping = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="ExplodeSound" to="." method="_on_explode_sound_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_firing_timer_timeout"]
